--- a/index.html
+++ b/index.html
@@ -213,36 +213,43 @@
 			  	<td>Photorealistic Portraiture</td>
 			  	<td>Highly optimized script for creating photorealistic portait images. Adjust the "Thematic Subject" section as needed. </td>
 			  	<td><a href="Photorealistic Portraiture.txt">Download</a></td>
+				<td><img src="IMG-SatelliteImagery.png" alt="Massive hurricane"  width="300" height="140"></td>
 			</tr>
 			<tr>
 			  	<td>ChatGPT Script - Fashion Portraits</td>
 			  	<td>Combines Portraiture and FashionShow optimized for MJ5</td>
 			  	<td><a href="ChatGPT Script - Fashion Portraits.txt">Download</a></td>
+				<td><img src="IMG-SatelliteImagery.png" alt="Massive hurricane"  width="300" height="140"></td>
 			</tr>
 			<tr>
 			  	<td>ChatGPT Script - FashionShow</td>
 			  	<td>Imagery of high fashion models</td>
 			  	<td><a href="ChatGPT Script - FashionShow.txt">Download</a></td>
+				<td><img src="IMG-SatelliteImagery.png" alt="Massive hurricane"  width="300" height="140"></td>
 			</tr>
 			<tr>
 			  	<td>ChatGPT Script - Jewlery</td>
 			  	<td>Beautiful images of expensive jewelry</td>
 			  	<td><a href="ChatGPT Script - Jewlery.txt">Download</a></td>
+				<td><img src="IMG-SatelliteImagery.png" alt="Massive hurricane"  width="300" height="140"></td>
 			</tr>
 			<tr>
 			  	<td>ChatGPT Script - Frisky Illustration Style</td>
 			  	<td>A more risque type of illustration</td>
 			  	<td><a href="ChatGPT Script - Frisky Illustration Style.txt">Download</a></td>
+				<td><img src="IMG-SatelliteImagery.png" alt="Massive hurricane"  width="300" height="140"></td>
 			</tr>
 			<tr>
 			  	<td>ChatGPT Script - Frisky Street Art Style</td>
 			  	<td>Portraiture images featuring urban styles</td>
 			  	<td><a href="ChatGPT Script - Frisky Street Art Style.txt">Download</a></td>
+				<td><img src="IMG-SatelliteImagery.png" alt="Massive hurricane"  width="300" height="140"></td>
 			</tr>
 			<tr>
 			  	<td>ChatGPT Script - Libertine</td>
 			  	<td>Portraiture images featuring free spirits whom push the boundary of acceptable moresurban styles</td>
 			  	<td><a href="ChatGPT Script - Libertine.txt">Download</a></td>
+				<td><img src="IMG-SatelliteImagery.png" alt="Massive hurricane"  width="300" height="140"></td>
 			</tr>
 			<!-- Blank row or row with a different background color -->
 			<tr style="background-color: #2c2c2c;">
@@ -254,21 +261,25 @@
 				<td>ChatGPT Script - Golfing</td>
 				<td>Images of golf courses and people playing golf</td>
 				<td><a href="ChatGPT Script - Golfing.txt">Download</a></td>
+				<td><img src="IMG-Golfer.png" alt="Sun sets on the 18th"  width="300" height="200"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Essence of a Song.txt</td>
 				<td>Imagery based on song lyrics style and substance</td>
 				<td><a href="ChatGPT Script - Essence of a Song.txt">Download</a></td>
+				<td><img src="IMG-SongEssense-Jolene.png" alt="Staring and waiting"  width="300" height="240"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Tiki Bar.txt</td>
 				<td>Imagery of Tiki Bars</td>
 				<td><a href="ChatGPT Script - Tiki Bar.txt">Download</a></td>
+				<td><img src="IMG-TikiBar.png" alt="Tiki bar getaway"  width="300" height="220"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Vintage Travel Poster - Tiki Bar</td>
 				<td>Vintage travel style images featuring tiki bars</td>
 				<td><a href="ChatGPT Script - Vintage Travel Poster - Tiki Bar.txt">Download</a></td>
+				<td><img src="IMG-TikiPoster.png" alt="Massive hurricane"  width="300" height="200"></td>
 			</tr>
 			<!-- Blank row or row with a different background color -->
 			<tr style="background-color: #2c2c2c;">
