--- a/index.html
+++ b/index.html
@@ -213,43 +213,43 @@
 			  	<td>Photorealistic Portraiture</td>
 			  	<td>Highly optimized script for creating photorealistic portait images. Adjust the "Thematic Subject" section as needed. </td>
 			  	<td><a href="Photorealistic Portraiture.txt">Download</a></td>
-				<td><img src="IMG-SatelliteImagery.png" alt="Massive hurricane"  width="300" height="140"></td>
+				<td><img src="IMG-PhotorealisticPhoto.png" alt="A master at creation"  width="300" height="200"></td>
 			</tr>
 			<tr>
 			  	<td>ChatGPT Script - Fashion Portraits</td>
 			  	<td>Combines Portraiture and FashionShow optimized for MJ5</td>
 			  	<td><a href="ChatGPT Script - Fashion Portraits.txt">Download</a></td>
-				<td><img src="IMG-SatelliteImagery.png" alt="Massive hurricane"  width="300" height="140"></td>
+				<td><img src="IMG-FashionPortrait.png" alt="Desert chic"  width="180" height="300"></td>
 			</tr>
 			<tr>
 			  	<td>ChatGPT Script - FashionShow</td>
 			  	<td>Imagery of high fashion models</td>
 			  	<td><a href="ChatGPT Script - FashionShow.txt">Download</a></td>
-				<td><img src="IMG-SatelliteImagery.png" alt="Massive hurricane"  width="300" height="140"></td>
+				<td><img src="IMG-FashionShow.png" alt="Two edgy street looks"  width="180" height="300"></td>
 			</tr>
 			<tr>
 			  	<td>ChatGPT Script - Jewlery</td>
 			  	<td>Beautiful images of expensive jewelry</td>
 			  	<td><a href="ChatGPT Script - Jewlery.txt">Download</a></td>
-				<td><img src="IMG-SatelliteImagery.png" alt="Massive hurricane"  width="300" height="140"></td>
+				<td><img src="IMG-Jewelry.png" alt="Exquisite Ring"  width="200" height="200"></td>
 			</tr>
 			<tr>
 			  	<td>ChatGPT Script - Frisky Illustration Style</td>
 			  	<td>A more risque type of illustration</td>
 			  	<td><a href="ChatGPT Script - Frisky Illustration Style.txt">Download</a></td>
-				<td><img src="IMG-SatelliteImagery.png" alt="Massive hurricane"  width="300" height="140"></td>
+				<td><img src="IMG-FriskyIllustration.png" alt="Massive hurricane"  width="180" height="300"></td>
 			</tr>
 			<tr>
 			  	<td>ChatGPT Script - Frisky Street Art Style</td>
 			  	<td>Portraiture images featuring urban styles</td>
 			  	<td><a href="ChatGPT Script - Frisky Street Art Style.txt">Download</a></td>
-				<td><img src="IMG-SatelliteImagery.png" alt="Massive hurricane"  width="300" height="140"></td>
+				<td><img src="IMG-StreetArtistStyle.png" alt="Foxy Roxy"  width="300" height="200"></td>
 			</tr>
 			<tr>
 			  	<td>ChatGPT Script - Libertine</td>
 			  	<td>Portraiture images featuring free spirits whom push the boundary of acceptable moresurban styles</td>
 			  	<td><a href="ChatGPT Script - Libertine.txt">Download</a></td>
-				<td><img src="IMG-SatelliteImagery.png" alt="Massive hurricane"  width="300" height="140"></td>
+				<td><img src="IMG-Libertine.png" alt="Feeling free"  width="300" height="200"></td>
 			</tr>
 			<!-- Blank row or row with a different background color -->
 			<tr style="background-color: #2c2c2c;">
