--- a/index.html
+++ b/index.html
@@ -459,46 +459,55 @@
 				<td>ChatGPT Script - Illustration Style - Dynamic</td>
 				<td>Realistic comic-book style illustrations of subjects in motion</td>
 				<td><a href="ChatGPT Script - Illustration Style - Dynamic.txt">Download</a></td>
+				<td><img src="IMG-DynamicIllustration.png" alt="Cowgirl Villian"  width="300" height="200"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT - Illustration - My Little Pony</td>
 				<td>WIP script for generating My Little Pony style imagery</td>
 				<td><a href="ChatGPT - Illustration - MyLittlePony Style.txt">Download</a></td>
+				<td><img src="IMG-MyLittlePony.png" alt="Pony Power"  width="300" height="200"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Lite Brite</td>
 				<td>Imagery that recalls pictures made with the Lite Brite toy</td>
 				<td><a href="ChatGPT Script - Lite Brite.txt">Download</a></td>
+				<td><img src="IMG-LiteBrite.png" alt="Aquarium"  width="300" height="200"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Nose Art Illustration Style</td>
 				<td>Imagery recalling the plane nose-art styles popular in the US military</td>
 				<td><a href="ChatGPT Script - Nose Art Illustration Style.txt">Download</a></td>
+				<td><img src="IMG-BomberGirl.png" alt="Vintage plane art"  width="300" height="200"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Photorealism</td>
 				<td>General subject matter in a photorealistic style</td>
 				<td><a href="ChatGPT Script - Photorealism Precision.txt">Download</a></td>
+				<td><img src="IMG-Photorealism.png" alt="Rhino"  width="300" height="140"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - PanAm Style</td>
 				<td>Travel posters in the vintage Pan-American Airlines style</td>
 				<td><a href="ChatGPT Script - PanAm Style.txt">Download</a></td>
+				<td><img src="IMG-PanAmPoster.png" alt="Fly to Rio de Jinero"  width="300" height="180"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Portraiture Style</td>
 				<td>Professional style portraits</td>
 				<td><a href="ChatGPT Script - Portraiture Style.txt">Download</a></td>
+				<td><img src="IMG-Portraiture.png" alt="Dude in blue"  width="200" height="300"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - 70sAlbums</td>
 				<td>Imagery that recalls vinyl album artwork from the 1970s and early 80s</td>
 				<td><a href="ChatGPT Script - 70sAlbums.txt">Download</a></td>
+				<td><img src="IMG-70sAlbums.png" alt="Rocking girls"  width="200" height="200"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Sandcastles_Random_DC</td>
 				<td>Whimsical sand castles</td>
 				<td><a href="ChatGPT Script - Sandcastles.txt">Download</a></td>
+				<td><img src="IMG-Sandcastle.png" alt="Cowgirl Villian"  width="200" height="200"></td>
 			</tr>
 			<!-- Blank row or row with a different background color -->
 			<tr style="background-color: #2c2c2c;">
