--- a/index.html
+++ b/index.html
@@ -519,26 +519,31 @@
 				<td>ChatGPT Script - Script to Develop Scripts</td>
 				<td>A script that will take input of other scripts and emulate their style to create a new script</td>
 				<td><a href="ChatGPT Script - Script to Develop Scripts.txt">Download</a></td>
+				<td><img src="IMG-ScriptForScripts.png" alt="Future warrior"  width="200" height="300"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Free Your mind</td>
 				<td>Script that will ask for thematic input and then how you want GPT to vary it</td>
 				<td><a href="ChatGPT script - Free Your Mind - V1.txt">Download</a></td>
+				<td><img src="IMG-FreeYourMind.png" alt="Otter"  width="300" height="200"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Simulos Script</td>
 				<td>A general purpose script for creating a wide variety of imagery</td>
 				<td><a href="ChatGPT Script - Simulos Script.txt">Download</a></td>
+				<td><img src="IMG-Simulos.png" alt="Elderly BadAss"  width="200" height="300"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - WiseBot Variation 4</td>
 				<td>A general purpose script for generating a wide variety of imagery prompts</td>
 				<td><a href="ChatGPT Script - WiseBot Variation 4.txt">Download</a></td>
+				<td><img src="IMG-Wisebot.png" alt="Doggy Poker"  width="200" height="200"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT - Midjourney Prompt Engine</td>
 				<td>Multi-part script that will create high-detail results across genres</td>
 				<td><a href="ChatGPT - Midjourney Prompt Engine.txt">Download</a></td>
+				<td><img src="IMG-MidjourneyPromptEngine.png" alt="Dad adn kid"  width="200" height="200"></td>
 			</tr>
 			<!-- Blank row or row with a different background color -->
 			<tr style="background-color: #2c2c2c;">
@@ -550,11 +555,13 @@
 				<td>ChatGPT - Adventure Game Engine</td>
 				<td>Play out a text-based adventure in ChatGPT 4</td>
 				<td><a href="ChatGPT - Adventure Game Engine.txt">Download</a></td>
+				<td><img src="IMG-Adventure.png" alt="A murder surely"  width="300" height="160"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT - Wrestling Game Engine</td>
 				<td>Play out a text-based Professional Wrestling RPG in ChatGPT 4</td>
 				<td><a href="ChatGPT - Wrestling Game Engine.txt">Download</a></td>
+				<td><img src="IMG-WrestlingRPG.png" alt="Off the top turnbuckle"  width="200" height="200"></td>
 			</tr>
 			<tr>
 			</tr>
