--- a/index.html
+++ b/index.html
@@ -213,43 +213,43 @@
 			  	<td>Photorealistic Portraiture</td>
 			  	<td>Highly optimized script for creating photorealistic portait images. Adjust the "Thematic Subject" section as needed. </td>
 			  	<td><a href="Photorealistic Portraiture.txt">Download</a></td>
-				<td><img src="IMG-SatelliteImagery.png" alt="Massive hurricane"  width="300" height="140"></td>
+				<td><img src="IMG-PhotorealisticPhoto.png" alt="A master at creation"  width="300" height="200"></td>
 			</tr>
 			<tr>
 			  	<td>ChatGPT Script - Fashion Portraits</td>
 			  	<td>Combines Portraiture and FashionShow optimized for MJ5</td>
 			  	<td><a href="ChatGPT Script - Fashion Portraits.txt">Download</a></td>
-				<td><img src="IMG-SatelliteImagery.png" alt="Massive hurricane"  width="300" height="140"></td>
+				<td><img src="IMG-FashionPortrait.png" alt="Desert chic"  width="180" height="300"></td>
 			</tr>
 			<tr>
 			  	<td>ChatGPT Script - FashionShow</td>
 			  	<td>Imagery of high fashion models</td>
 			  	<td><a href="ChatGPT Script - FashionShow.txt">Download</a></td>
-				<td><img src="IMG-SatelliteImagery.png" alt="Massive hurricane"  width="300" height="140"></td>
+				<td><img src="IMG-FashionShow.png" alt="Two edgy street looks"  width="180" height="300"></td>
 			</tr>
 			<tr>
 			  	<td>ChatGPT Script - Jewlery</td>
 			  	<td>Beautiful images of expensive jewelry</td>
 			  	<td><a href="ChatGPT Script - Jewlery.txt">Download</a></td>
-				<td><img src="IMG-SatelliteImagery.png" alt="Massive hurricane"  width="300" height="140"></td>
+				<td><img src="IMG-Jewelry.png" alt="Exquisite Ring"  width="200" height="200"></td>
 			</tr>
 			<tr>
 			  	<td>ChatGPT Script - Frisky Illustration Style</td>
 			  	<td>A more risque type of illustration</td>
 			  	<td><a href="ChatGPT Script - Frisky Illustration Style.txt">Download</a></td>
-				<td><img src="IMG-SatelliteImagery.png" alt="Massive hurricane"  width="300" height="140"></td>
+				<td><img src="IMG-FriskyIllustration.png" alt="Massive hurricane"  width="180" height="300"></td>
 			</tr>
 			<tr>
 			  	<td>ChatGPT Script - Frisky Street Art Style</td>
 			  	<td>Portraiture images featuring urban styles</td>
 			  	<td><a href="ChatGPT Script - Frisky Street Art Style.txt">Download</a></td>
-				<td><img src="IMG-SatelliteImagery.png" alt="Massive hurricane"  width="300" height="140"></td>
+				<td><img src="IMG-StreetArtistStyle.png" alt="Foxy Roxy"  width="300" height="200"></td>
 			</tr>
 			<tr>
 			  	<td>ChatGPT Script - Libertine</td>
 			  	<td>Portraiture images featuring free spirits whom push the boundary of acceptable moresurban styles</td>
 			  	<td><a href="ChatGPT Script - Libertine.txt">Download</a></td>
-				<td><img src="IMG-SatelliteImagery.png" alt="Massive hurricane"  width="300" height="140"></td>
+				<td><img src="IMG-Libertine.png" alt="Feeling free"  width="300" height="200"></td>
 			</tr>
 			<!-- Blank row or row with a different background color -->
 			<tr style="background-color: #2c2c2c;">
@@ -291,96 +291,115 @@
 				<td>ChatGPT Script - MagicalCityscape</td>
 				<td>Views of a city where magic is a reality</td>
 				<td><a href="ChatGPT Script - MagicalCityscape.txt">Download</a></td>
+				<td><img src="IMG-MagicalCityscape.png" alt="Fabled Atlantis"  width="300" height="200"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Daedric Lords</td>
 				<td>Portraits of the Daedric Lords from The Elder Scrolls</td>
 				<td><a href="ChatGPT Script - Daedric Lords.txt">Download</a></td>
+				<td><img src="IMG-DaedricLords.png" alt="Clavicus Vile"  width="180" height="300"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Portraiture - WizardingWorld</td>
 				<td>Professional style portraits in the style of the Wizarding World universe</td>
 				<td><a href="ChatGPT Script - Portraiture - WizardingWorld.txt">Download</a></td>
+				<td><img src="IMG-WizardingPortrait.png" alt="Slytherin Top Boy"  width="180" height="300"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT_Random_DC</td>
 				<td>Imagery of DC-style comic book characters</td>
 				<td><a href="ChatGPT_Random_DC.txt">Download</a></td>
+				<td><img src="IMG-DC.png" alt="Dark anti-hero"  width="180" height="300"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - RedDeadRedemption</td>
 				<td>Imagery that recalls the video game Red Dead Redemption</td>
 				<td><a href="ChatGPT Script - RedDeadRedemption.txt">Download</a></td>
+				<td><img src="IMG-RDRStyle.png" alt="Gunfight from horseback"  width="300" height="200"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Story Mode - GoT</td>
 				<td>Cinematic images for Game of Thrones</td>
 				<td><a href="ChatGPT Script - Story Mode - GoT.txt">Download</a></td>
+				<td><img src="IMG-GoT-WhiteWalker.png" alt="Relentless march to the Wall"  width="300" height="180"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Story Mode - Moana</td>
 				<td>Cinematic images for live-action Moana</td>
 				<td><a href="ChatGPT Script - Story Mode - Moana.txt">Download</a></td>
+				<td><img src="IMG-Story-Moana.png" alt="Maui smiling"  width="180" height="300"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Story Mode - Moana - Editorial</td>
 				<td>Character images for live-action Moana</td>
 				<td><a href="ChatGPT Script - Story Mode - Moana - Editorial.txt">Download</a></td>
+				<td><img src="IMG-Story-Moana-Nefiti.png" alt="Carrying the heart of Nefiti"  width="300" height="170"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Story Mode - The Witcher</td>
 				<td>Cinematic images for The Witcher</td>
 				<td><a href="ChatGPT Script - Story Mode - The Witcher.txt">Download</a></td>
+				<td><img src="IMG-Witcher.png" alt="Geralt vs a Leshen"  width="300" height="180"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - StoryMode Style - WizardingWorld</td>
 				<td>Imagery that tells a story set in the Wizarding World universe</td>
 				<td><a href="ChatGPT Script - StoryMode Style - WizardingWorld.txt">Download</a></td>
+				<td><img src="IMG-Story-HP.png" alt="Dementor on the prowl"  width="200" height="300"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - StoryMode Style - WoT</td>
 				<td>Imagery that tells a story set in the Wheel of Time universe</td>
 				<td><a href="ChatGPT Script - StoryMode Style - WoT.txt">Download</a></td>
+				<td><img src="IMG-Story-WoT.png" alt="Elayne on the Lion Throne"  width="300" height="200"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - StoryMode Style.txt</td>
 				<td>Imagery that tells a story</td>
 				<td><a href="ChatGPT Script - StoryMode Style.txt">Download</a></td>
+				<td><img src="IMG-StoryMode.png" alt="Randall Flagg Observing"  width="300" height="180"></td>
 			</tr>
 			<tr>
 				<td>Darkest Dungeon - Story Time</td>
 				<td>ChatGPT 4 generated story in the style of the Ancestor from Darkest Dungeon</td>
 				<td><a href="Darkest Dungeon - Story Time.txt">Download</a></td>
+				<td><img src="IMG-TikiPoster.png" alt="Massive hurricane"  width="300" height="200"></td>
 			</tr>
 			<tr>
 				<td>Darkest Dungeon - Narrator Text - part 1</td>
 				<td>Inputs used to prime ChatGPT 4 for Story Time</td>
 				<td><a href="Darkest Dungeon - Narrator Text - part 1.txt">Download</a></td>
+				<td><img src="IMG-DD-1.png" alt="Eldritch power whispers"  width="300" height="200"></td>
 			</tr>
 			<tr>
 				<td>Darkest Dungeon - Narrator Text - part 2</td>
 				<td>Inputs used to prime ChatGPT 4 for Story Time</td>
 				<td><a href="Darkest Dungeon - Narrator Text - part 2.txt">Download</a></td>
+				<td><img src="IMG-DD-2.png" alt="of riches and more"  width="300" height="200"></td>
 			</tr>
 			<tr>
 				<td>Darkest Dungeon - Narrator Text - part 3</td>
 				<td>Inputs used to prime ChatGPT 4 for Story Time</td>
 				<td><a href="Darkest Dungeon - Narrator Text - part 3.txt">Download</a></td>
+				<td><img src="IMG-DD-3.png" alt="...beckoning to you in your dreams"  width="300" height="200"></td>
 			</tr>
 			<tr>
 				<td>Darkest Dungeon - Narrator Text - part 4</td>
 				<td>Inputs used to prime ChatGPT 4 for Story Time</td>
 				<td><a href="Darkest Dungeon - Narrator Text - part 4.txt">Download</a></td>
+				<td><img src="IMG-DD-4.png" alt="...and consumes your rational mind"  width="300" height="200"></td>
 			</tr>
 			<tr>
 				<td>Darkest Dungeon - Narrator Text - part 5</td>
 				<td>Inputs used to prime ChatGPT 4 for Story Time</td>
 				<td><a href="Darkest Dungeon - Narrator Text - part 5.txt">Download</a></td>
+				<td><img src="IMG-DD-5.png" alt="but you come anyway"  width="200" height="300"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Wars Or Battles</td>
 				<td>Action imagery of warfare</td>
 				<td><a href="ChatGPT Script - Wars Or Battles.txt">Download</a></td>
+				<td><img src="IMG-BattleScene.png" alt="300"  width="300" height="200"></td>
 			</tr>
 			<!-- Blank row or row with a different background color -->
 			<tr style="background-color: #2c2c2c;">
@@ -392,36 +411,43 @@
 				<td>GTA 1 - Background and Styling</td>
 				<td>Reference details for setting and stylistic elements - Execute first</td>
 				<td><a href="GTA 1 - Background and Styling.txt">Download</a></td>
+				<td><img src="IMG-GTA1.png" alt="Surfers Cove"  width="300" height="180"></td>
 			</tr>
 			<tr>
 				<td>GTA 2 - Our Setting</td>
 				<td>Define locations for the other scripts - Execute second</td>
 				<td><a href="GTA 2 - Our Setting.txt">Download</a></td>
+				<td><img src="IMG-GTA2.png" alt="Elysium Drive"  width="300" height="180"></td>
 			</tr>
 			<tr>
 				<td>GTA 3 - Prompts from MJ using describe</td>
 				<td>Results from using describe on GTA screenshots, helps set prompt style - Execute third</td>
 				<td><a href="GTA 3 - Prompts MJ created using describe on GTA V screenshots.txt">Download</a></td>
+				<td><img src="IMG-GTA3.png" alt="Isabella Rossilini"  width="180" height="300"></td>
 			</tr>
 			<tr>
 				<td>GTA 4 - Preparing prompt structure</td>
 				<td>Guidelines on prompt formatting - Execute fourth</td>
 				<td><a href="GTA 4 - Preparing prompt structure.txt">Download</a></td>
+				<td><img src="IMG-GTA4.png" alt="Nighttime streetrace"  width="300" height="180"></td>
 			</tr>
 			<tr>
 				<td>GTA 5 - First Generation Set</td>
 				<td>First set of results - you do not need to execute this one</td>
 				<td><a href="GTA 5 - First Generation Set.txt">Download</a></td>
+				<td><img src="IMG-GTA5.png" alt="Jean-Pierre in Green"  width="180" height="300"></td>
 			</tr>
 			<tr>
 				<td>GTA 6 - Revising prompt structure for in-game scene</td>
 				<td>Updating the prompt guidelines to focus on scenes from the game</td>
 				<td><a href="GTA 6 - Revising prompt structure for in-game scene.txt">Download</a></td>
+				<td><img src="IMG-GTA6.png" alt="Caves and Treasure"  width="300" height="180"></td>
 			</tr>
 			<tr>
 				<td>GTA 7 - Revising prompt structure for in-game scene</td>
 				<td>Updating prompt guidelines to focus on characters</td>
 				<td><a href="GTA 7 - Revising prompt structure for in-game people.txt">Download</a></td>
+				<td><img src="IMG-GTA7.png" alt="Escape in style"  width="300" height="180"></td>
 			</tr>
 			<!-- Blank row or row with a different background color -->
 			<tr style="background-color: #2c2c2c;">
@@ -433,46 +459,55 @@
 				<td>ChatGPT Script - Illustration Style - Dynamic</td>
 				<td>Realistic comic-book style illustrations of subjects in motion</td>
 				<td><a href="ChatGPT Script - Illustration Style - Dynamic.txt">Download</a></td>
+				<td><img src="IMG-DynamicIllustration.png" alt="Cowgirl Villian"  width="300" height="200"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT - Illustration - My Little Pony</td>
 				<td>WIP script for generating My Little Pony style imagery</td>
 				<td><a href="ChatGPT - Illustration - MyLittlePony Style.txt">Download</a></td>
+				<td><img src="IMG-MyLittlePony.png" alt="Pony Power"  width="300" height="200"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Lite Brite</td>
 				<td>Imagery that recalls pictures made with the Lite Brite toy</td>
 				<td><a href="ChatGPT Script - Lite Brite.txt">Download</a></td>
+				<td><img src="IMG-LiteBrite.png" alt="Aquarium"  width="300" height="200"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Nose Art Illustration Style</td>
 				<td>Imagery recalling the plane nose-art styles popular in the US military</td>
 				<td><a href="ChatGPT Script - Nose Art Illustration Style.txt">Download</a></td>
+				<td><img src="IMG-BomberGirl.png" alt="Vintage plane art"  width="300" height="200"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Photorealism</td>
 				<td>General subject matter in a photorealistic style</td>
 				<td><a href="ChatGPT Script - Photorealism Precision.txt">Download</a></td>
+				<td><img src="IMG-Photorealism.png" alt="Rhino"  width="300" height="140"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - PanAm Style</td>
 				<td>Travel posters in the vintage Pan-American Airlines style</td>
 				<td><a href="ChatGPT Script - PanAm Style.txt">Download</a></td>
+				<td><img src="IMG-PanAmPoster.png" alt="Fly to Rio de Jinero"  width="300" height="180"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Portraiture Style</td>
 				<td>Professional style portraits</td>
 				<td><a href="ChatGPT Script - Portraiture Style.txt">Download</a></td>
+				<td><img src="IMG-Portraiture.png" alt="Dude in blue"  width="200" height="300"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - 70sAlbums</td>
 				<td>Imagery that recalls vinyl album artwork from the 1970s and early 80s</td>
 				<td><a href="ChatGPT Script - 70sAlbums.txt">Download</a></td>
+				<td><img src="IMG-70sAlbums.png" alt="Rocking girls"  width="200" height="200"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Sandcastles_Random_DC</td>
 				<td>Whimsical sand castles</td>
 				<td><a href="ChatGPT Script - Sandcastles.txt">Download</a></td>
+				<td><img src="IMG-Sandcastle.png" alt="Cowgirl Villian"  width="200" height="200"></td>
 			</tr>
 			<!-- Blank row or row with a different background color -->
 			<tr style="background-color: #2c2c2c;">
@@ -484,26 +519,31 @@
 				<td>ChatGPT Script - Script to Develop Scripts</td>
 				<td>A script that will take input of other scripts and emulate their style to create a new script</td>
 				<td><a href="ChatGPT Script - Script to Develop Scripts.txt">Download</a></td>
+				<td><img src="IMG-ScriptForScripts.png" alt="Future warrior"  width="200" height="300"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Free Your mind</td>
 				<td>Script that will ask for thematic input and then how you want GPT to vary it</td>
 				<td><a href="ChatGPT script - Free Your Mind - V1.txt">Download</a></td>
+				<td><img src="IMG-FreeYourMind.png" alt="Otter"  width="300" height="200"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Simulos Script</td>
 				<td>A general purpose script for creating a wide variety of imagery</td>
 				<td><a href="ChatGPT Script - Simulos Script.txt">Download</a></td>
+				<td><img src="IMG-Simulos.png" alt="Elderly BadAss"  width="200" height="300"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - WiseBot Variation 4</td>
 				<td>A general purpose script for generating a wide variety of imagery prompts</td>
 				<td><a href="ChatGPT Script - WiseBot Variation 4.txt">Download</a></td>
+				<td><img src="IMG-Wisebot.png" alt="Doggy Poker"  width="200" height="200"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT - Midjourney Prompt Engine</td>
 				<td>Multi-part script that will create high-detail results across genres</td>
 				<td><a href="ChatGPT - Midjourney Prompt Engine.txt">Download</a></td>
+				<td><img src="IMG-MidjourneyPromptEngine.png" alt="Dad adn kid"  width="200" height="200"></td>
 			</tr>
 			<!-- Blank row or row with a different background color -->
 			<tr style="background-color: #2c2c2c;">
@@ -515,11 +555,13 @@
 				<td>ChatGPT - Adventure Game Engine</td>
 				<td>Play out a text-based adventure in ChatGPT 4</td>
 				<td><a href="ChatGPT - Adventure Game Engine.txt">Download</a></td>
+				<td><img src="IMG-Adventure.png" alt="A murder surely"  width="300" height="160"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT - Wrestling Game Engine</td>
 				<td>Play out a text-based Professional Wrestling RPG in ChatGPT 4</td>
 				<td><a href="ChatGPT - Wrestling Game Engine.txt">Download</a></td>
+				<td><img src="IMG-WrestlingRPG.png" alt="Off the top turnbuckle"  width="200" height="200"></td>
 			</tr>
 			<tr>
 			</tr>
