--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 			  	<td>ChatGPT Script - Fashion Portraits</td>
 			  	<td>Combines Portraiture and FashionShow optimized for MJ5</td>
 			  	<td><a href="ChatGPT Script - Fashion Portraits.txt">Download</a></td>
-				<td><img src="IMG-FashionPortrait.png" alt="Desert chic"  width="180" height="300"></td>
+				<td><img src="IMG-FashionPortrait.png" alt="Desert chic"  width="200" height="300"></td>
 			</tr>
 			<tr>
 			  	<td>ChatGPT Script - FashionShow</td>
@@ -243,7 +243,7 @@
 			  	<td>ChatGPT Script - Frisky Street Art Style</td>
 			  	<td>Portraiture images featuring urban styles</td>
 			  	<td><a href="ChatGPT Script - Frisky Street Art Style.txt">Download</a></td>
-				<td><img src="IMG-StreetArtistStyle.png" alt="Foxy Roxy"  width="300" height="200"></td>
+				<td><img src="IMG-StreetArtStyle.png" alt="Foxy Roxy"  width="300" height="200"></td>
 			</tr>
 			<tr>
 			  	<td>ChatGPT Script - Libertine</td>
@@ -321,7 +321,7 @@
 				<td>ChatGPT Script - Story Mode - GoT</td>
 				<td>Cinematic images for Game of Thrones</td>
 				<td><a href="ChatGPT Script - Story Mode - GoT.txt">Download</a></td>
-				<td><img src="IMG-GoT-WhiteWalker.png" alt="Relentless march to the Wall"  width="300" height="180"></td>
+				<td><img src="IMG-GoT-WhiteWalker.png" alt="Relentless march to the Wall"  width="300" height="160"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Story Mode - Moana</td>
@@ -339,7 +339,7 @@
 				<td>ChatGPT Script - Story Mode - The Witcher</td>
 				<td>Cinematic images for The Witcher</td>
 				<td><a href="ChatGPT Script - Story Mode - The Witcher.txt">Download</a></td>
-				<td><img src="IMG-Witcher.png" alt="Geralt vs a Leshen"  width="300" height="180"></td>
+				<td><img src="IMG-Witcher.png" alt="Geralt vs a Leshen"  width="300" height="160"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - StoryMode Style - WizardingWorld</td>
@@ -351,7 +351,7 @@
 				<td>ChatGPT Script - StoryMode Style - WoT</td>
 				<td>Imagery that tells a story set in the Wheel of Time universe</td>
 				<td><a href="ChatGPT Script - StoryMode Style - WoT.txt">Download</a></td>
-				<td><img src="IMG-Story-WoT.png" alt="Elayne on the Lion Throne"  width="300" height="200"></td>
+				<td><img src="IMG-Story-WoT.png" alt="Elayne on the Lion Throne"  width="300" height="300"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - StoryMode Style.txt</td>
@@ -477,7 +477,7 @@
 				<td>ChatGPT Script - Nose Art Illustration Style</td>
 				<td>Imagery recalling the plane nose-art styles popular in the US military</td>
 				<td><a href="ChatGPT Script - Nose Art Illustration Style.txt">Download</a></td>
-				<td><img src="IMG-BomberGirl.png" alt="Vintage plane art"  width="300" height="200"></td>
+				<td><img src="IMG-BomberGirl.png" alt="Vintage plane art"  width="200" height="300"></td>
 			</tr>
 			<tr>
 				<td>ChatGPT Script - Photorealism</td>
