--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
 			</tr>
 			<!-- GPT-Based Gaming -->
 			<tr>
-				<td rowspan="2">GPT-based Gaming</td>
+				<td rowspan="3">GPT-based Gaming</td>
 				<td>ChatGPT - Adventure Game Engine</td>
 				<td>Play out a text-based adventure in ChatGPT 4</td>
 				<td><a href="ChatGPT - Adventure Game Engine.txt">Download</a></td>
@@ -562,6 +562,12 @@
 				<td>Play out a text-based Professional Wrestling RPG in ChatGPT 4</td>
 				<td><a href="ChatGPT - Wrestling Game Engine.txt">Download</a></td>
 				<td><img src="IMG-WrestlingRPG.png" alt="Off the top turnbuckle"  width="200" height="200"></td>
+			</tr>
+			<tr>
+				<td>ChatGPT - Creature Feature Game</td>
+				<td>GPT + Genetics = New Creatures!</td>
+				<td><a href="Creature Feature - A ChatGPT Game.txt">Download</a></td>
+				<td><img src="IMG-CreatureFeature.png" alt="Stylized animal"  width="200" height="200"></td>
 			</tr>
 			<tr>
 			</tr>
